# etlcraft-airflow-providers-airbyte

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  README.rst  main.py  sample_dag.py  setup.cfg  setup.py
.github/workflows/: main.yml
airbyte_airflow_provider_advm/: hook.py  operators.py  utils.py
airbyte_airflow_provider_advm/examples/: example_transform_config_dag.py  sync_airbyte_connection_by_prefix_dag.py  update_source_config_mvp.py
airbyte_api/: api.py  models.py
airbyte_api/airflow_provider/: airbyte_config_transformer_operator.py  utils.py
airbyte_api/airflow_provider/examples/: update_source_config_mvp.py
airbyte_api/airflow_provider/operators/: airbyte_config_transformer_operator.py
airbyte_api/tests/: test_api.py
airflow/providers/airbyte_advm/: get_provider_info.py
airflow/providers/airbyte_advm/examples/: example_transform_config_dag.py
airflow/providers/airbyte_advm/hooks/: airbyte.py
airflow/providers/airbyte_advm/operators/: airbyte.py
airflow/providers/airbyte_advm/sensors/: airbyte.py
docs/: airbyte_airflow_provider_advm.hook.md  airbyte_airflow_provider_advm.operators.md  airbyte_api.api.md  airbyte_api.models.md  dag_description.md
