[metadata]
name = apache-airflow-providers-airbyte-advm
summary = Provider for Apache Airflow. Implements apache-airflow-providers-airbyte-advm package
description = Provider package apache-airflow-providers-airbyte-advm for Apache Airflow
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Apache Software Foundation
author_email = dev@airflow.apache.org
url = https://airflow.apache.org/
download_url = https://archive.apache.org/dist/airflow/providers
license = Apache License 2.0
license_files = 
	LICENSE
	NOTICE
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Framework :: Apache Airflow
	Framework :: Apache Airflow :: Provider
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: System :: Monitoring
project_urls = 
	Documentation=https://airflow.apache.org/docs/apache-airflow-providers-airbyte/3.1.0/
	Bug Tracker=https://github.com/apache/airflow/issues
	Source Code=https://github.com/apache/airflow
	Slack Chat=https://s.apache.org/airflow-slack
	Twitter=https://twitter.com/ApacheAirflow
	YouTube=https://www.youtube.com/channel/UCSXwxpWZQ7XZ1WL3wqevChA/

[bdist_wheel]
python_tag = py3

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.7
packages = find:
setup_requires = 
	setuptools
	wheel
install_requires = 
	apache-airflow-providers-http
	apache-airflow>=2.2.0

[options.entry_points]
apache_airflow_provider = 
	provider_info=airflow.providers.airbyte.get_provider_info:get_provider_info

[files]
packages = airflow.providers.airbyte_advm

[egg_info]
tag_build = 
tag_date = 0

